Update swagger auth and add Authorize Using Token
